se modifica UsuarioServiceTest para que muestre que se crea una ciudad o comuna en el caso que no exista